--- a/CrudForms/CrudForms.csproj
+++ b/CrudForms/CrudForms.csproj
@@ -429,27 +429,27 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="dev200x200.ico" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\ArrowIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\BasketIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\CartIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\CartIconWithNumber.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\CityIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\DashBoardIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\DownloadIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\EditIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\EyeIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\FamilyIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\HomeIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\HorizontalBarIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\LogIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\LogoffIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\LogoIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\MailIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\OrderIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\ReportIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\UserCustomIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\UserIcon.js" />
-    <EmbeddedResource Include="FrontEndComponents\Icons\UsersIcon.js" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\ArrowIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\BasketIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\CartIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\CartIconWithNumber.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\CityIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\DashBoardIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\DownloadIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\EditIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\EyeIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\FamilyIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\HomeIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\HorizontalBarIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\LogIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\LogoffIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\LogoIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\MailIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\OrderIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\ReportIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\UserCustomIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\UserIcon.jsx" />
+    <EmbeddedResource Include="FrontEndComponents\Icons\UsersIcon.jsx" />
     <None Include="Resources\logonewwhite.png" />
     <None Include="Resources\logo_black.png" />
     <None Include="Resources\project-management-white-200x200.png" />
